# channels-examples

./: .gitignore  .replit  README.rst  pyproject.toml  requirements.txt
attached_assets/: Pasted--IntegrityError-at-register-duplicate-key-value-violates-unique-constraint-chat-userprofile-use-1747498231725.txt
multichat/: connect_settings.py  manage.py  requirements.txt  settings.py
multichat/chat/: admin.py  consumers.py  models.py  procfile  settings.py  url.py  urls.py
multichat/chat/migrations/: forms.py  signals.py
multichat/connect/: admin.py  asgi.py  consumers.py  routing.py  tests.py  urls.py  views.py
multichat/connect/migrations/: 0001_initial.py
multichat/connect1/: admin.py  apps.py  consumers.py  models.py  views.py
multichat/connect_chat/: apps.py  urls.py  views.py
multichat/connect_chat/migrations/: 0001_initial.py  0002_alter_room_id.py  0003_alter_room_id.py
multichat/multichat/: asgi.py  settings.py  url.py  urls.py  wsgi.py
multichat/static/css/: style.css
multichat/static/js/: chat.js  language.js  room.js  script-new.js  websocket_handler.js
multichat/templates/: 404.html  500.html  base.html  chat.html  home.html  index.html
multichat/templates/registration/: logout.html  register.html  room.html
news_collector/templates/: 500.html
