[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.0",
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "psycopg2-binary>=2.9.10",
]
